--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -8,7 +8,6 @@
   max-width: 1000px;
   margin-top: 20px;
   width: 90%;
-  border: 1px solid #2980b9;
   color: #667c99;
   border-width: 2px 0px;
   border-image: initial;
@@ -19,4 +18,26 @@
   border-bottom: 2px dotted #fff;
   border-left: 2px dotted #fff;
   border-right: 2px dotted #fff;
+}
+#wrapperengageps {
+  text-align: center;
+
+}
+#engageboxps {
+  display: inline-block;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  min-width: 400px;
+  max-width: 800px;
+  width: 90%;
+  color: rgb(102, 124, 153);
+  border-width: 2px 0px;
+  border-image: initial;
+  background: #ffefcc;
+  border-radius: 4px;
+  padding: 5px 15px;
+  border-top: 2px dotted rgb(255, 255, 255);
+  border-bottom: 2px dotted rgb(255, 255, 255);
+  border-left: 2px dotted rgb(255, 255, 255);
+  border-right: 2px dotted rgb(255, 255, 255);
 }
