--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -1,3 +1,5 @@
+@primarybg: #ffefcc;
+
 #wrapperengage {
   text-align: center;
 
@@ -11,7 +13,7 @@
   color: #667c99;
   border-width: 2px 0px;
   border-image: initial;
-  background: #ffefcc;
+  background: @primarybg;
   border-radius: 4px;
   padding: 5px 18px;
   border-top: 2px dotted #fff;
