--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -29,7 +29,7 @@
   display: inline-block;
   margin-top: 20px;
   margin-bottom: 20px;
-  min-width: 400px;
+  min-width: fit-content;
   max-width: 800px;
   width: 90%;
   color: rgb(102, 124, 153);
